# yt-comment-sentiment-analysis-chrome-plugin

./: .gitignore  Dockerfile  dvc.yaml  pyproject.toml  setup.py  tfidf_vectorizer.pkl
.github/workflows/: cicd.yaml
flask_app/: app.py
src/data/: data_ingestion.py  data_preprocessing.py
src/model/: model_building.py  model_evaluation.py  register_model.py
yt_chrome_plugin_frontend/: manifest.json  popup.js
